InternexDev_Sandbox/src/objects/CP_FundingProvider__c.object
<CustomObject>
    <fields>
        <fullName>Client_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Product</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Funding Provider</relationshipLabel>
        <relationshipName>CP_FundingProviders_del</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Provider__c</fullName>
        <label>Funding Provider</label>
        <referenceTo>Capital_Provider__c</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>CP_FundingProviders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CP FundingProvider</label>
    <nameField>
        <displayFormat>CPFP-{00000}</displayFormat>
        <label>CP-FP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP FundingProviders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>